# polygen_legacy

./: .env  .gitignore  Cargo.toml  Rocket.toml  build.rs  sqlx-data.json
.github/workflows/: deploy.yml  rust.yml
db/migrations/: 20220707063636_create-table.sql
private/css/: game.css  game_core.css  index.css  post.css  session.css  sidebar.css
private/js/: algorithm.js  game.js  game_core.js  index.js  login.js  post.js  post_view.js  register.js  sidebar.js
private/templates/: error.html.hbs  game.html.hbs  game_core.html.hbs  index.html.hbs  login.html.hbs  post.html.hbs  post_view.html.hbs  register.html.hbs  session.html.hbs
private/templates/partials/: announcement.html.hbs  comment.html.hbs  editor.html.hbs  footer.html.hbs  game_chat.html.hbs  nav.html.hbs  post.html.hbs  prelude.html.hbs  renderer.html.hbs  room.html.hbs  sidebar-nav.html.hbs  sleft.html.hbs  sright.html.hbs
public/css/: index.css  post.css
public/js/: algorithm.js  index.js  login.js  register.js
src/: api.rs  db.rs  error.rs  game.rs  index.rs  lib.rs  main.rs  post.rs  responds.rs  response.rs  session.rs  socket.rs  user.rs
src/api/: announcement.rs  captcha.rs  comment.rs  post.rs  room.rs  user.rs
src/game/: core.rs  event.rs  generator.rs  map.rs  player.rs  room.rs  socket.rs
src/game/core/: generator.rs  land.rs  map.rs
src/game/map/: land.rs
src/session/: login.rs  register.rs
templates/: error.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs
