[package]
name = "polygen"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
lazy_static = "1.4.0"
regex = "1.5.6"
sha256 = "1.0.3"
sqlx = { version = "0.5", features = ["macros", "migrate", "offline"] }
chrono = "0.4.19"
dotenv = "0.15.0"
captcha = "0.0.9"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
futures-util = "0.3.21"
log = "0.4.17"
parking_lot = "0.12.1"

[build-dependencies]
minify-js = "0.1.5"
css-minify = "0.2.2"
minify-html = "0.9.2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
