[package]
name = "polygen"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
lazy_static = "1.4.0"
regex = "1.5.6"
sha256 = "1.0.3"
sqlx = { version = "0.5.13", features = ["macros", "migrate", "offline"] }
chrono = "0.4.19"
dotenv = "0.15.0"
captcha = "0.0.9"
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
log = "0.4.17"
hashbrown = "0.12.3"
fastrand = "1.8.0"

[build-dependencies]
minify-js = "0.2.9"
css-minify = "0.2.2"
minify-html = "0.10.2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
